@@ -1004,14 +1004,19 @@ void MusicLibraryItemRoot::clearImages()
     }
 }
 
+QString MusicLibraryItemRoot::artistName(const Song &s)
+{
+    if (Song::Standard==s.type || (Song::Playlist==s.type && !s.albumArtist().isEmpty())) {
+        return s.artistOrComposer();
+    }
+    return i18n("Various Artists");
+}
+
 QString MusicLibraryItemRoot::songArtist(const Song &s) const
 {
     if (isFlat || !supportsAlbumArtist) {
         return s.artist;
     }
 
-    if (Song::Standard==s.type || (Song::Playlist==s.type && !s.albumArtist().isEmpty())) {
-        return s.artistOrComposer();
-    }
-    return i18n("Various Artists");
+    return artistName(s);
 }
